Google login fixes
Google login fixes

--- a/ionic web/public/index.html
+++ b/ionic web/public/index.html
@@ -5,6 +5,7 @@
   <title>Ionic App</title>
 
   <base href="/" />
+  <meta name="google-signin-client_id" content="825025305729-e1b9kjkf9hqfv62j38b304nl0r69grd6.apps.googleusercontent.com">
   <meta name="viewport"
         content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
